MAJOR UPDATE: Atualizados métodos para Update de Pedidos
+ Transferidos métodos para um novo controlador "UpdatePedidoController"
+ Adicionado upload do ficheiro de resultados do Pedido de diagnóstico
+ Corrigida alguma lógica na atualização dos resultados do primeiro e segundo teste
+ Melhorado e atualizado error handling

o Multer adicionado às dependências
+ Adicionada diretoria de configurações
o Atualizada documentação
